[package]
name = "mdt_rust"
version = "0.1.0"
authors = ["barsa2000 <barsanti-filippo2@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
regex = "1.4.2"

[lib]
name = "mdt"
path = "src/mdt/lib.rs"

[[bin]]
name = "mdt"
path = "src/main.rs"